--- a/frontend/src/styles/crm/ChartOverview.css
+++ b/frontend/src/styles/crm/ChartOverview.css
@@ -1,7 +1,7 @@
 .charts-container {
   display: flex;
   justify-content: space-between;
-  
+  /* gap: 10px; */
   padding: 0.8rem;
   background: transparent;
   flex-wrap: wrap;
@@ -14,10 +14,10 @@
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
-  width: 600px;
+  width: 30%;
   height: 400px;
   display: flex;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   flex-direction: column;
   align-items: center;
 }
@@ -27,10 +27,10 @@
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
-  width: 950px;
+  width: 40%;
   height: 400px;
   display: flex;
-   margin-right: 18px;
+   /* margin-right: 18px; */
   flex-direction: column;
   align-items: center;
 }
