--- a/frontend/src/styles/main/Navbar.css
+++ b/frontend/src/styles/main/Navbar.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 40px;
+  padding: 0.8% 3%;
   color: white;
   z-index: 100;
   background: transparent;
@@ -22,8 +22,9 @@
   .navbar-left {
     /* margin-top: 15px; */
     display: flex;
+    width: 25%;
     align-items: center;
-    gap: 0.75rem;
+    /* gap: 0.75rem; */
     left: 0;
   }
   
@@ -41,10 +42,11 @@
   .navbar-center {
     
     display: flex;
+    width: 50%;
     align-items: left;
-    justify-content: flex-start;
-    gap: 30px;
-    margin-right: 500px;
+    justify-content: flex-end;
+    gap: 50px;
+    
   }
   
   .nav-link {
@@ -58,7 +60,7 @@
   }
   
   .nav-link:hover {
-    color: #c52d12;
+    color: #8B0000;
     position: relative;
     overflow: hidden;
   }
@@ -70,7 +72,7 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: #c52d12;
+    background: #8B0000;
     transition: width 0.3s ease;
   }
 
@@ -122,7 +124,7 @@
 
 .dropdown-menu a:hover {
   background-color: rgba(255, 255, 255, 0.05);
-  color: #c52d12;
+  color: #8B0000;
 }
 
 /* Optional underline effect */
@@ -133,7 +135,7 @@
   left: 20px;
   width: 0;
   height: 2px;
-  background: #c52d12;
+  background: #8B0000;
   transition: width 0.3s ease;
 }
 
@@ -144,7 +146,8 @@
   .navbar-social {
     display: flex;
     gap: 1rem;
-    margin-right: 70px;
+    justify-content: end;
+    width: 25%;
   }
   
   .social-icon {
