--- a/frontend/src/styles/main/OurServices.css
+++ b/frontend/src/styles/main/OurServices.css
@@ -1,7 +1,7 @@
 /* Container */
 .services-section {
   background: #f9f9f9;
-  padding: 20px 40px;
+  padding: 60px 60px;
   color: #333;
   text-align: center;
 }
@@ -34,6 +34,7 @@
 .service-card {
   background: #ffffff;
   border: 1px solid #ddd;
+  border-radius: 16px;
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
@@ -51,7 +52,7 @@
 /* Image */
 .service-image {
   width: 100%;
-  height: 280px;
+  height: 60%;
   object-fit: cover;
 }
 
@@ -82,13 +83,14 @@
 
 /* Button */
 .explore-button {
-  background-color: #c52d12;
+  background-color: #8B0000;
   color: white;
   border: none;
   padding: 10px 18px;
-  border-radius: 6px;
+  border-radius: 16px;
   font-size: 0.95rem;
   cursor: pointer;
+  font-family: 'Poppins', sans-serif;
   transition: background-color 0.3s ease;
 }
 
