--- a/frontend/src/styles/main/RaiseTheBar.css
+++ b/frontend/src/styles/main/RaiseTheBar.css
@@ -11,11 +11,12 @@
 
 .raise-content {
   flex: 1 1 500px;
-  max-width: 600px;
+  padding-left: 5%;
+  width: 50%;
 }
 
 .raise-subtitle {
-  color: #c52d12;
+  color: #8B0000;
   font-size: 0.95rem;
   font-weight: 600;
   letter-spacing: 1px;
@@ -31,7 +32,7 @@
 }
 
 .raise-title span {
-  color: #c52d12;
+  color: #8B0000;
 }
 
 .raise-description {
@@ -42,8 +43,9 @@
 
 /* Image Styling */
 .raise-image-wrapper {
-  flex: 1 1 400px;
+  width: 50%;
   display: flex;
+  border-radius: 16px;
   justify-content: center;
   align-items: center;
 }
@@ -51,12 +53,14 @@
 .raise-image-mask {
   overflow: hidden;
   max-width: 100%;
+  border-radius: 16px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
 }
 
 .raise-image-mask img {
   width: 100%;
   height: auto;
+  border-radius: 16px;
   object-fit: cover;
   display: block;
 }
