--- a/frontend/src/styles/main/HeroSection.css
+++ b/frontend/src/styles/main/HeroSection.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url('/assets/main/banner-img.png');
+  background-image: url('/assets/main/banner-img.webp');
   height: 100vh;
   width: 100%;
   max-width: 100vw;
